Update 'go-zwsswdkf' component image to: quay.io/rhtap_qe/go-zwsswdkf:47ca922c182e642cb202807a0578383761099e07@sha256:e1c441dc82ab65872b0f8ec5d60c4bac60dc812afdc6a7895d4a7f8c477179fc

--- a/components/go-zwsswdkf/overlays/development/deployment-patch.yaml
+++ b/components/go-zwsswdkf/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-zwsswdkf
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-zwsswdkf:47ca922c182e642cb202807a0578383761099e07@sha256:e1c441dc82ab65872b0f8ec5d60c4bac60dc812afdc6a7895d4a7f8c477179fc
+          name: container-image
